--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,85 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 .App {
-  text-align: center;
+    width: 500px;
+    margin: 50px auto;
+    background: #F5F5F5;
+    padding: 30px 50px; 
 }
 
-.App-logo {
-  height: 40vmin;
+.red {
+    color: red
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.bold {
+    font-weight: bold;
 }
 
-.App-link {
-  color: #09d3ac;
+.left, .right {
+    display: inline-block;
+    margin-bottom: 15px;
+}
+
+.left {
+    text-align: left;
+    width: 80%;  
+}
+
+.right {
+    text-align: right;
+    width: 20%;
+}
+
+input[type="range"] {
+    width: 100%;
+    -webkit-appearance: none; 
+    background: #9E9E9E;
+    outline: none;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    background: #4F4F4F;
+    cursor: pointer;
+    margin-top: -12px;
+    transition: .1s;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 8.4px;
+    cursor: pointer;
+    border-radius: 2px; 
+}
+
+#months {
+    background: -webkit-linear-gradient(left , red 0%, red 9.09%, #9E9E9E 9.09%, #9E9E9E 100%);
+}
+
+.select-option {
+    margin-bottom: 25px;
+}
+
+.amount {
+    font-size: 20px;
+}
+
+.totalbyn {
+    color: #9E9E9E;
+    font-weight: 500;
+}
+
+@media(max-width: 520px) {
+   .App {
+        width: 100%;
+        margin: 0;
+        padding: 15px 20px; 
+    } 
 }
